Get rid of compiler warnings